Colaboratory を使用して作成しました

--- a/【砂川快斗】Python基礎_提出課題_editor_ipynb_のコピー.ipynb
+++ b/【砂川快斗】Python基礎_提出課題_editor_ipynb_のコピー.ipynb
@@ -726,13 +726,31 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Animal:\n",
+        "  def __init__(self, name, species):\n",
+        "    self.name = name\n",
+        "    self.species = species\n",
+        "\n",
+        "  def greeting(self):\n",
+        "    print(f'こんにちは、私の名前は{self.name}です')\n"
       ],
       "metadata": {
-        "id": "IrIMvp2Haoak"
+        "id": "IrIMvp2Haoak",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "56faa9e2-bde3-41a6-cd94-6da959d648d2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "こんにちは、私の名前はココです\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -761,13 +779,26 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "animal_1 = Animal('ココ', '虎')\n",
+        "print(animal_1.species)"
       ],
       "metadata": {
-        "id": "S2jvWOv8MfAp"
+        "id": "S2jvWOv8MfAp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4e0c5217-5158-4a14-bcbd-d42367b7fdb7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "虎\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -792,6 +823,24 @@
       "metadata": {
         "id": "jEf3LmHhA8uD"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Dog(Animal):\n",
+        "  def __init__(self, name, species, age):\n",
+        "    super().__init__(name, species)\n",
+        "    self.age = age\n",
+        "\n",
+        "  def greeting_plus(self):\n",
+        "    super().greeting()\n",
+        "    print(f'年齢は{self.age}歳です')\n"
+      ],
+      "metadata": {
+        "id": "1zSFG8XNengY"
+      },
+      "execution_count": 20,
+      "outputs": []
     },
     {
       "cell_type": "code",
