Colaboratory を使用して作成しました

--- a/【砂川快斗】Python基礎_提出課題_editor_ipynb_のコピー.ipynb
+++ b/【砂川快斗】Python基礎_提出課題_editor_ipynb_のコピー.ipynb
@@ -84,13 +84,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "27a585ac-4192-4dfa-e9bc-e29db154e0d4"
+        "outputId": "19e56725-7724-45d8-8e94-6f3b09078196"
       },
       "source": [
-        "num = (137**3 + 145) / 8\n",
-        "print(int(num))"
+        "num = int((137**3 + 145) / 8)\n",
+        "print(num)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         },
         "outputId": "0b6fe928-b4b8-4004-f1b5-88b4f1352624"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
         },
         "outputId": "b8433198-754b-4f3a-c715-630c7e3b9755"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
         },
         "outputId": "3ac03816-d9e5-4745-8dd3-fcbb35f471fb"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,23 +281,23 @@
       "source": [
         "# こちらのセルを実行してください。\n",
         "tuple_1 = (3, '整数', 1.5, '小数', '車', '文字列')\n",
-        "numbers = tuple_1[3:6:1]\n",
-        "print(numbers)"
+        "li = tuple_1[3::2]\n",
+        "print(li)"
       ],
       "metadata": {
         "id": "KPymiSxESXUp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "719c3b78-4565-4bd1-8bb2-e15d94505a14"
+        "outputId": "ab2d5ad7-aa30-4217-d99e-9cba3bbdfce8"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "('小数', '車', '文字列')\n"
+            "('小数', '文字列')\n"
           ]
         }
       ]
@@ -342,7 +342,7 @@
         "num_1 = 487\n",
         "list_2 = [123, 345, 12, 678]\n",
         "list_3 = [34, 23, 487, 298]\n",
-        "if num_1 in list_1:\n",
+        "if num_1 in list_2:\n",
         "  print('このリストはlist_2の中に存在しています')\n",
         "elif num_1 in list_3:\n",
         "  print('このリストはlist_3の中に存在しています')\n",
@@ -354,9 +354,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2aec14b9-ee44-4d8c-c67a-53c813c23611"
+        "outputId": "4c4c34d0-bc88-49e7-eb19-0f2684eb067d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,12 +400,12 @@
         "if num_2 % 3 == 0:\n",
         "  if num_2 >= 400:\n",
         "    print('この数字は3の倍数で400よりも大きいです')\n",
-        "  elif num_2 <= 400:\n",
+        "  else:\n",
         "    print('この数字は3の倍数で400よりも小さいです')\n",
         "else:\n",
         "  if num_2 >= 400:\n",
         "    print('この数字は3の倍数ではなく400よりも大きいです')\n",
-        "  elif num_2 <= 400:\n",
+        "  else:\n",
         "    print('この数字は3の倍数ではなく400よりも小さいです')\n",
         "  \n"
       ],
@@ -414,9 +414,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d89cfe71-ae5e-4700-8e8c-4a7d2e5397f5"
+        "outputId": "cfdf70a4-f8d3-4d38-abcc-a060fcbc1391"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +466,7 @@
         },
         "outputId": "6423c9e5-3554-4f71-b9dd-b71af8b7ce6d"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,19 +510,19 @@
         "  total += i\n",
         "  i += 1\n",
         "  if total > 10000:\n",
-        "    num = i\n",
+        "    break\n",
         "\n",
         "print(f'最終的な計算結果{total}')\n",
-        "print(f'最後に足した数字{num}')\n"
+        "print(f'最後に足した数字{i}')\n"
       ],
       "metadata": {
         "id": "kbxk2JV0hpKY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "74151098-799d-403f-b1af-c23f9a2d1933"
+        "outputId": "33ec6516-1424-4bf6-81bd-bad4d8a147f9"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,7 +575,7 @@
         },
         "outputId": "6d0f7a13-f1fa-4be2-b036-c81880f28d8f"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -624,17 +624,17 @@
       "source": [
         "# こちらのセルを実行してください。\n",
         "list_2 = [4, 8, 3.5, 1, 9, 2, 10.3]\n",
-        "list_2.sort()\n",
-        "print(list_2)"
+        "list_2_sorted = sorted(list_2)\n",
+        "print(list_2_sorted)"
       ],
       "metadata": {
         "id": "D8oHJcZkNSqF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9515c947-7855-4546-897b-de3bb000cafb"
+        "outputId": "112be3f8-3712-4f22-c7c6-ff2820494388"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,7 +688,7 @@
         },
         "outputId": "bbefb21a-7095-4764-803c-c5cbe4baeef6"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,25 +732,13 @@
         "    self.species = species\n",
         "\n",
         "  def greeting(self):\n",
-        "    print(f'こんにちは、私の名前は{self.name}です')\n"
+        "    print(f'こんにちは、私の名前は{self.name}です')"
       ],
       "metadata": {
-        "id": "IrIMvp2Haoak",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "56faa9e2-bde3-41a6-cd94-6da959d648d2"
+        "id": "IrIMvp2Haoak"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "こんにちは、私の名前はココです\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -780,22 +768,24 @@
       "cell_type": "code",
       "source": [
         "animal_1 = Animal('ココ', '虎')\n",
-        "print(animal_1.species)"
+        "print(animal_1.species)\n",
+        "animal_1.greeting()"
       ],
       "metadata": {
         "id": "S2jvWOv8MfAp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4e0c5217-5158-4a14-bcbd-d42367b7fdb7"
+        "outputId": "03fa1825-2c5d-405c-e5ae-0eb55048cc24"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "虎\n"
+            "虎\n",
+            "こんにちは、私の名前はココです\n"
           ]
         }
       ]
@@ -828,8 +818,8 @@
       "cell_type": "code",
       "source": [
         "class Dog(Animal):\n",
-        "  def __init__(self, name, species, age):\n",
-        "    super().__init__(name, species)\n",
+        "  def __init__(self, name, age):\n",
+        "    super().__init__(name, age)\n",
         "    self.age = age\n",
         "\n",
         "  def greeting_plus(self):\n",
@@ -838,17 +828,6 @@
       ],
       "metadata": {
         "id": "1zSFG8XNengY"
-      },
-      "execution_count": 20,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "gYQE35ToM9No"
       },
       "execution_count": null,
       "outputs": []
