Colaboratory を使用して作成しました

--- a/【砂川快斗】Python基礎_提出課題_editor_ipynb_のコピー.ipynb
+++ b/【砂川快斗】Python基礎_提出課題_editor_ipynb_のコピー.ipynb
@@ -819,7 +819,7 @@
       "source": [
         "class Dog(Animal):\n",
         "  def __init__(self, name, age):\n",
-        "    super().__init__(name, age)\n",
+        "    super().__init__(name, 'dog')\n",
         "    self.age = age\n",
         "\n",
         "  def greeting_plus(self):\n",
