Colaboratory を使用して作成しました

--- a/numpy_editor.ipynb
+++ b/numpy_editor.ipynb
@@ -76,7 +76,7 @@
         "# こちらのセルを実行してください。\n",
         "import numpy as np"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -1783,7 +1783,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "93bf9200-7ccb-4319-f6bb-83fed5b83841"
+        "outputId": "212807cd-ba60-474f-ad74-ac2250851259"
       },
       "source": [
         "# こちらのセルを実行してください。\n",
@@ -1793,7 +1793,7 @@
         "array_3 = np.random.randint(0, 100, (5, 6))\n",
         "array_3"
       ],
-      "execution_count": 139,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1807,7 +1807,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 139
+          "execution_count": 10
         }
       ]
     },
@@ -1818,12 +1818,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "335b1a3a-9e9f-43df-d029-f41aa4cbcdcb"
+        "outputId": "9fa1e17a-bcb8-49ba-c018-e5d76478b949"
       },
       "source": [
         "array_3.argmax()"
       ],
-      "execution_count": 140,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1833,7 +1833,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 140
+          "execution_count": 11
         }
       ]
     },
@@ -1892,12 +1892,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab750e43-eba9-464d-f17f-2971b64eb174"
+        "outputId": "ef4992c7-2220-487d-b728-c01cdbaa9144"
       },
       "source": [
         "array_3[:, 1]"
       ],
-      "execution_count": 142,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1907,7 +1907,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 142
+          "execution_count": 12
         }
       ]
     },
@@ -1923,13 +1923,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Pk7wJ2lcAnr"
+        "id": "7Pk7wJ2lcAnr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b9a7996-5658-421f-c149-cb99ed3c0156"
       },
       "source": [
-        ""
+        "np.identity(5)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 0., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1943,13 +1962,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "acpuAOwagS7T"
+        "id": "acpuAOwagS7T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "23ee52d9-f786-40b6-aa84-f04b414eaeb1"
       },
       "source": [
-        ""
+        "np.count_nonzero(array_3 > 60)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "17"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1975,9 +2009,9 @@
         "id": "SBM_7pg1dtbW"
       },
       "source": [
-        ""
+        "array_1 = np.arange(10)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -1992,13 +2026,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AxxxU6aVdtbW"
+        "id": "AxxxU6aVdtbW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fc564246-8e1e-4db7-e751-2297e1c211dc"
       },
       "source": [
-        ""
+        "array_1[4:8]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4, 5, 6, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2012,13 +2061,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0LAqZ94rdtbX"
+        "id": "0LAqZ94rdtbX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "625898be-576c-41cd-f8af-f82139b2cc4b"
       },
       "source": [
-        ""
+        "array_1[-7:-2]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 4, 5, 6, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2032,13 +2096,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "70ozA_sedtbX"
+        "id": "70ozA_sedtbX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aecfdf1f-c4d7-4abc-97a1-07886f99b6b7"
       },
       "source": [
-        ""
+        "array_1[::-1]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([9, 8, 7, 6, 5, 4, 3, 2, 1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2052,13 +2131,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "968mooCpdtbX"
+        "id": "968mooCpdtbX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6a887f10-f39b-410e-93e7-becf2c90d047"
       },
       "source": [
-        ""
+        "array_1[2:8:2]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 4, 6])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2072,13 +2166,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3Lz-6ToQdtbY"
+        "id": "3Lz-6ToQdtbY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a910e3ed-e31d-4d63-db62-1ca4c24b6f29"
       },
       "source": [
-        ""
+        "array_1 = np.arange(9).reshape(3,3)\n",
+        "print(array_1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]\n",
+            " [6 7 8]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2092,13 +2201,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7dx5snvZdtbZ"
+        "id": "7dx5snvZdtbZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c1e86c0-8ce9-45ad-8b60-44fd6249bd5c"
       },
       "source": [
-        ""
+        "data = np.eye(3)\n",
+        "data_2 = np.identity(3)\n",
+        "print(data)\n",
+        "print(data_2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 0. 0.]\n",
+            " [0. 1. 0.]\n",
+            " [0. 0. 1.]]\n",
+            "[[1. 0. 0.]\n",
+            " [0. 1. 0.]\n",
+            " [0. 0. 1.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2112,13 +2241,36 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s-Z6xKe9dtbc"
+        "id": "s-Z6xKe9dtbc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c7d6d2fd-c88c-4003-824b-d4615c67b985"
       },
       "source": [
-        ""
+        "data = np.ones((10,10))\n",
+        "data[1:-1,1:-1] = 0\n",
+        "print(data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+            " [1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2150,13 +2302,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ltiaL66sdtbd"
+        "id": "ltiaL66sdtbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b20b12b-81ae-4cd1-ebe3-65c8f1cc6bb1"
       },
       "source": [
-        ""
+        "data = np.zeros((8,8))\n",
+        "data[1::2,::2] = 1\n",
+        "data[::2,1::2] = 1\n",
+        "print(data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0. 1. 0. 1. 0. 1. 0. 1.]\n",
+            " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+            " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+            " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+            " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+            " [1. 0. 1. 0. 1. 0. 1. 0.]\n",
+            " [0. 1. 0. 1. 0. 1. 0. 1.]\n",
+            " [1. 0. 1. 0. 1. 0. 1. 0.]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2170,13 +2344,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0MLrrXOadtbf"
+        "id": "0MLrrXOadtbf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "84ee9cd3-9044-46d5-af47-9a460aed7506"
       },
       "source": [
-        ""
+        "data = np.arange(10)\n",
+        "data[(3 > data) & (data <= 8)] *= -1\n",
+        "print(data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0 -1 -2  3  4  5  6  7  8  9]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2205,13 +2393,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TzfzCQW8dtbh"
+        "id": "TzfzCQW8dtbh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b29a60ac-10e8-43f7-abc5-fc8ced7a1136"
       },
       "source": [
-        ""
+        "data = np.zeros((5,5))\n",
+        "data += np.arange(5)\n",
+        "print(data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]\n",
+            " [0. 1. 2. 3. 4.]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
