Colaboratory を使用して作成しました

--- a/【砂川快斗】Numpy_提出課題_editor_ipynb_のコピー.ipynb
+++ b/【砂川快斗】Numpy_提出課題_editor_ipynb_のコピー.ipynb
@@ -118,9 +118,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bQ7dhM9i-uJb",
-        "outputId": "3680c554-f914-49e8-e916-4a7d7a5b636c"
+        "outputId": "925d02b0-287b-497b-af99-aca86a8f46f0"
       },
-      "execution_count": 63,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,13 +520,32 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "array_5 = array_2 % 2 == 0\n",
+        "array_1(array_5)\n",
+        "？？？？？？？"
       ],
       "metadata": {
-        "id": "7dB3wdH_v403"
+        "id": "7dB3wdH_v403",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 188
+        },
+        "outputId": "a6697739-03b1-4aec-b15a-3d6215d5e521"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-91-1686d5e15dfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0marray_5\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray_2\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0marray_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray_5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -555,7 +574,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "array_6 = (array_1 % 2 == 0) | (array_1 % 5 == 0)\n",
+        "print(array_6)"
       ],
       "metadata": {
         "id": "VETu2c6hxiAp"
@@ -590,7 +610,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(np.vstack([array_1, array_2]))"
       ],
       "metadata": {
         "id": "fWPzydQbwKmJ"
@@ -625,7 +645,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(np.hstack([array_1, array_2]))"
       ],
       "metadata": {
         "id": "9F4nFagqxEWO"
@@ -660,7 +680,8 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(np.vsplit(array_1, 2))\n",
+        "print(np.vsplit(array_2, 2))"
       ],
       "metadata": {
         "id": "yjlj8HVBxGHr"
@@ -695,13 +716,25 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "print(array_2.min(axis=0))"
       ],
       "metadata": {
-        "id": "olmsyAjNxQiv"
+        "id": "olmsyAjNxQiv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7e0e3f82-85ec-46f5-f248-915d96e35c41"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[151 152 153 154 155]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -730,13 +763,28 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "np.count_nonzero(array_1 % 3 == 0)"
       ],
       "metadata": {
-        "id": "f4H29iu4zhcK"
+        "id": "f4H29iu4zhcK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3a7ce197-612c-4baa-fd96-e2c77c002912"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "17"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
     }
   ]
 }
