Colaboratory を使用して作成しました

--- a/【砂川快斗】Numpy_提出課題_editor_ipynb_のコピー.ipynb
+++ b/【砂川快斗】Numpy_提出課題_editor_ipynb_のコピー.ipynb
@@ -75,7 +75,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np"
+        "import numpy as np  "
       ],
       "metadata": {
         "id": "_9GSYee2yG8d"
@@ -118,9 +118,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bQ7dhM9i-uJb",
-        "outputId": "925d02b0-287b-497b-af99-aca86a8f46f0"
+        "outputId": "a570daf0-6069-4bdf-f9ad-0a94aa762be7"
       },
-      "execution_count": 95,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,9 +175,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2c59e60-b2c1-4048-c9c1-55240c56f3f0"
+        "outputId": "8cec25ae-7887-4c69-b4f0-013bad612360"
       },
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,22 +224,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(array_1[5])"
+        "print(array_1[3])"
       ],
       "metadata": {
         "id": "fglmsY3guT3g",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "549568bb-215c-4d84-b5af-fe870addab37"
+        "outputId": "59951110-4fd3-4d8f-962c-a5952036dd84"
       },
-      "execution_count": 37,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[126 127 128 129 130]\n"
+            "[116 117 118 119 120]\n"
           ]
         }
       ]
@@ -520,29 +520,24 @@
     {
       "cell_type": "code",
       "source": [
-        "array_5 = array_2 % 2 == 0\n",
-        "array_1(array_5)\n",
-        "？？？？？？？"
+        "array_5 = array_2 % 3 == 0\n",
+        "array_6 = array_1[np.where(array_5 == True)]\n",
+        "print(array_6)"
       ],
       "metadata": {
         "id": "7dB3wdH_v403",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 188
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6697739-03b1-4aec-b15a-3d6215d5e521"
+        "outputId": "62e5f8a4-f721-4afe-c180-489bf6a09601"
       },
-      "execution_count": 91,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-91-1686d5e15dfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0marray_5\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray_2\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0marray_1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray_5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[103 106 109 112 115 118 121 124 127 130 133 136 139 142 145 148]\n"
           ]
         }
       ]
@@ -574,14 +569,35 @@
     {
       "cell_type": "code",
       "source": [
-        "array_6 = (array_1 % 2 == 0) | (array_1 % 5 == 0)\n",
-        "print(array_6)"
+        "array_7 = (array_1 % 2 == 0) | (array_1 % 5 == 0)\n",
+        "print(array_7)"
       ],
       "metadata": {
-        "id": "VETu2c6hxiAp"
+        "id": "VETu2c6hxiAp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0dd6a69f-10cf-49f7-c6c3-f0a493b8b15f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[False  True False  True  True]\n",
+            " [ True False  True False  True]\n",
+            " [False  True False  True  True]\n",
+            " [ True False  True False  True]\n",
+            " [False  True False  True  True]\n",
+            " [ True False  True False  True]\n",
+            " [False  True False  True  True]\n",
+            " [ True False  True False  True]\n",
+            " [False  True False  True  True]\n",
+            " [ True False  True False  True]]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -684,10 +700,39 @@
         "print(np.vsplit(array_2, 2))"
       ],
       "metadata": {
-        "id": "yjlj8HVBxGHr"
+        "id": "yjlj8HVBxGHr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d76c9fc0-44c8-459b-f0e0-1e335c9d8e6b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[array([[101, 102, 103, 104, 105],\n",
+            "       [106, 107, 108, 109, 110],\n",
+            "       [111, 112, 113, 114, 115],\n",
+            "       [116, 117, 118, 119, 120],\n",
+            "       [121, 122, 123, 124, 125]]), array([[126, 127, 128, 129, 130],\n",
+            "       [131, 132, 133, 134, 135],\n",
+            "       [136, 137, 138, 139, 140],\n",
+            "       [141, 142, 143, 144, 145],\n",
+            "       [146, 147, 148, 149, 150]])]\n",
+            "[array([[151, 152, 153, 154, 155],\n",
+            "       [156, 157, 158, 159, 160],\n",
+            "       [161, 162, 163, 164, 165],\n",
+            "       [166, 167, 168, 169, 170],\n",
+            "       [171, 172, 173, 174, 175]]), array([[176, 177, 178, 179, 180],\n",
+            "       [181, 182, 183, 184, 185],\n",
+            "       [186, 187, 188, 189, 190],\n",
+            "       [191, 192, 193, 194, 195],\n",
+            "       [196, 197, 198, 199, 200]])]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -723,9 +768,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7e0e3f82-85ec-46f5-f248-915d96e35c41"
+        "outputId": "f326219e-23cf-4d53-f713-75f9a0c4ef19"
       },
-      "execution_count": 128,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,9 +815,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3a7ce197-612c-4baa-fd96-e2c77c002912"
+        "outputId": "9e9625d9-56c5-410c-c624-3f39e578c899"
       },
-      "execution_count": 127,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +827,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 127
+          "execution_count": 29
         }
       ]
     }
